--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.10",
-    "gulp-6to5": "^3.0.0"
+    "gulp-babel": "^5.1.0",
+    "gulp-connect": "^2.2.0"
   },
   "dependencies": {}
 }
